--- a/map.html
+++ b/map.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Map of Sites</title>
+  <title>Map of Sampling Sites</title>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <style>
     #map {
@@ -14,35 +14,35 @@
 
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script>
-    const map = L.map('map').setView([20.5937, 78.9629], 5); // Centered on India
+    const map = L.map('map').setView([24.216, 55.476], 9); // Centered near UAE
 
     // Add OpenStreetMap tiles
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       maxZoom: 19,
     }).addTo(map);
 
-    // Example data for 14 sites
+    // Data for 14 sites
     const sites = [
-      { lat: 28.6139, lng: 77.209, details: 'Site 1: Sampling details here' },
-      { lat: 19.076, lng: 72.8777, details: 'Site 2: Sampling details here' },
-      { lat: 13.0827, lng: 80.2707, details: 'Site 3: Sampling details here' },
-      { lat: 22.5726, lng: 88.3639, details: 'Site 4: Sampling details here' },
-      { lat: 26.9124, lng: 75.7873, details: 'Site 5: Sampling details here' },
-      { lat: 12.9716, lng: 77.5946, details: 'Site 6: Sampling details here' },
-      { lat: 17.385, lng: 78.4867, details: 'Site 7: Sampling details here' },
-      { lat: 23.0225, lng: 72.5714, details: 'Site 8: Sampling details here' },
-      { lat: 25.3176, lng: 82.9739, details: 'Site 9: Sampling details here' },
-      { lat: 21.1458, lng: 79.0882, details: 'Site 10: Sampling details here' },
-      { lat: 27.1767, lng: 78.0081, details: 'Site 11: Sampling details here' },
-      { lat: 15.3173, lng: 75.7139, details: 'Site 12: Sampling details here' },
-      { lat: 11.0168, lng: 76.9558, details: 'Site 13: Sampling details here' },
-      { lat: 9.9312, lng: 76.2673, details: 'Site 14: Sampling details here' },
+      { lat: 24.216167, lng: 55.752722, details: 'NS1: Town_center<br>Irrigation: Non_saline<br>pH (Water): 6.96<br>EC (Water): 0.426 dS/m<br>pH (Soil): 7.24<br>EC (Soil): 0.24 dS/m<br>OM: 3.9' },
+      { lat: 24.907514, lng: 55.622314, details: 'NS2: Nahel_1<br>Irrigation: Non_saline<br>pH (Water): 7.9<br>EC (Water): 0.324 dS/m<br>pH (Soil): 7.1<br>EC (Soil): 0.38 dS/m<br>OM: 4.94' },
+      { lat: 24.866806, lng: 55.765806, details: 'NS3: Nahel_2<br>Irrigation: Non_saline<br>pH (Water): 7.99<br>EC (Water): 0.337 dS/m<br>pH (Soil): 7.52<br>EC (Soil): 0.168 dS/m<br>OM: 3.58' },
+      { lat: 24.898875, lng: 55.682964, details: 'NS4: Nahel_3<br>Irrigation: Non_saline<br>pH (Water): 7.99<br>EC (Water): 0.335 dS/m<br>pH (Soil): 7.52<br>EC (Soil): 0.113 dS/m<br>OM: 4.93' },
+      { lat: 24.100833, lng: 55.535722, details: 'NS5: Al_rawda<br>Irrigation: Non_saline<br>pH (Water): 7.78<br>EC (Water): 0.326 dS/m<br>pH (Soil): 7.63<br>EC (Soil): 0.149 dS/m<br>OM: 1.75' },
+      { lat: 24.203517, lng: 55.814833, details: 'NS6: Seah_sharkiya<br>Irrigation: Non_saline<br>pH (Water): 7.8<br>EC (Water): 0.374 dS/m<br>pH (Soil): 7.11<br>EC (Soil): 0.043 dS/m<br>OM: 5.71' },
+      { lat: 24.301667, lng: 55.718083, details: 'NS7: Nabbagh<br>Irrigation: Non_saline<br>pH (Water): 7.29<br>EC (Water): 3.22 dS/m<br>pH (Soil): 7.08<br>EC (Soil): 0.001 dS/m<br>OM: 5.125' },
+      { lat: 24.202222, lng: 55.788361, details: 'S1: Sarooj<br>Irrigation: Saline<br>pH (Water): 7.55<br>EC (Water): 13.6 dS/m<br>pH (Soil): 6.91<br>EC (Soil): 0.22 dS/m<br>OM: 3.33' },
+      { lat: 24.867259, lng: 55.745303, details: 'S2: Nahel_1<br>Irrigation: Saline<br>pH (Water): 7.33<br>EC (Water): 6.85 dS/m<br>pH (Soil): 10.69<br>EC (Soil): 0.226 dS/m<br>OM: 4.18' },
+      { lat: 24.873767, lng: 55.762533, details: 'S3: Nahel_2<br>Irrigation: Saline<br>pH (Water): 7.57<br>EC (Water): 8.13 dS/m<br>pH (Soil): 7.8<br>EC (Soil): 0.22 dS/m<br>OM: 1.89' },
+      { lat: 24.867259, lng: 55.745303, details: 'S4: Nahel_3<br>Irrigation: Saline<br>pH (Water): 7.72<br>EC (Water): 8.13 dS/m<br>pH (Soil): 7.59<br>EC (Soil): 0.141 dS/m<br>OM: 2.516' },
+      { lat: 24.410692, lng: 55.398208, details: 'S5: Nahshala<br>Irrigation: Saline<br>pH (Water): 7.41<br>EC (Water): 28 dS/m<br>pH (Soil): 6.99<br>EC (Soil): 4.89 dS/m<br>OM: 2.89' },
+      { lat: 24.345611, lng: 55.460528, details: 'S6: Seah_salem_east<br>Irrigation: Saline<br>pH (Water): 7.43<br>EC (Water): 8.26 dS/m<br>pH (Soil): 6.85<br>EC (Soil): 0.326 dS/m<br>OM: 1.37' },
+      { lat: 24.346028, lng: 55.440111, details: 'S7: Seah_salem_west<br>Irrigation: Saline<br>pH (Water): 7.63<br>EC (Water): 7.88 dS/m<br>pH (Soil): 7.01<br>EC (Soil): 0.47 dS/m<br>OM: 2.25' },
     ];
 
     // Add markers for each site
     sites.forEach(site => {
       const marker = L.marker([site.lat, site.lng]).addTo(map);
-      marker.bindPopup(`<b>Location:</b> ${site.lat}, ${site.lng}<br><b>Details:</b> ${site.details}`);
+      marker.bindPopup(`<b>Details:</b><br>${site.details}`);
     });
   </script>
 </body>
